src/styles/components/image.scss
.image {
    display: block;
    width: 100%;

    &--grey {
        filter: grayscale(100%);

        &:hover,
        &:focus {
            filter: grayscale(0);
        }
    }

    &--rounded {
        border-radius: 30px;
    }

    &--square {
        aspect-ratio: 1/1;
        border-radius: 10px;
    }

    &--one-third-width {
        align-self: center;
        max-width: 370px;

        @media only screen and (min-width: 1024px) {
            max-width: calc(40% - 100px);
            order: 1;
        }
    }

    &__icons {
        display: block;
        height: 300px;
        margin: auto;
        min-width: 260px;
        position: relative;

        &--small,
        &--med,
        &--large {
            position: absolute;

            &:hover {
                cursor: pointer;
                transform: scale(1.1);
            }
        }

        &--small {
            right: 0;
            top: 130px;

            & .image__icons-asset {
                height: 90px;
                width: 90px;
            }
        }

        &--med {
            right: 20px;

            & .image__icons-asset {
                height: 110px;
                width: 110px;
            }
        }

        &--large {
            left: 0;
            top: 80px;

            & .image__icons-asset {
                height: 140px;
                width: 140px;
            }
        }
    }

    &__tech-logos {
        display: flex;
        flex-wrap: wrap;
        justify-content: center;
        width: 100%;

        @media only screen and (min-width: 1024px) {
            justify-content: space-between;
        }
    }
    
    &__tech-logo {
        height: auto;
        margin: auto;
        max-height: 100px;
        width: auto;
    }
}

